# Image-Stitching

./: CMakeLists.txt  README.md  main.cpp
src/: featureproperties.h  stitch.cpp  stitch.h
test_image/01/: setting.txt
